<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registraion_form_locatlization">

    <TextView
        android:id="@+id/reg_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_f"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/enter_name"
        android:layout_below="@+id/reg_"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/phone_"
        android:inputType="number"
        android:layout_below="@+id/name_edit"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_margin="15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/phone"
        android:layout_marginTop="30dp"
        android:layout_margin="15dp"/>

</RelativeLayout>